# cyberdog_final

./: Readme.md  cyberdog_ws  service.txt  topic.txt  view_camera_image.py
1AI_camra/: 仿真.md  真机.md
2RGB和鱼眼相机/: RGB和鱼眼相机真机.md
3导航-已废弃/: nav真机.md  建图代码.md
4运动控制/: 运动控制真机.md
5自定义步态/: Gait_Def_crawl.toml  Gait_Params_crawl.toml  Gait_Params_crawl_full.toml  Usergait_List_crawl.toml  main_crawl.py
cyberdog_ws/src/: CyberDog_项目代码结构与功能分析报告.md
qrcode/ros2_publishers_ws/: ros2_publishers_ws_info.md
yellow_line_ws/: analyze_color.py  analyze_text_ratio.py  debug_a2_advanced.py  debug_a2_improved.py  multi_camera_viewer.py  red_barrier_detector_improved.py  start_ai.sh  start_ai_camera.sh  start_mission.sh  start_rgb.sh  test_green_arrow.py  test_roi.py  test_yellow_line_detector.py  test_yellow_marker_detector_accurate.py  启动节点名单.md  图片检查修改方案总结.md  测试名单.md  相机管理完整解决方案.md  设置名单.md  错误.md
yellow_line_ws/src/state_machine/: CMakeLists.txt  package.xml  setup.py  状态机超详细说明.md
yellow_line_ws/src/state_machine/config/: vision_check_params.yaml
yellow_line_ws/src/state_machine/crawl/: Gait_Def_crawl.toml  Gait_Params_crawl.toml  Usergait_List_crawl.toml  main_crawl.py  robot_control_response_lcmt.py
yellow_line_ws/src/state_machine/launch/: complete_system.launch.py  simple_launch.launch.py  state_machine_system.launch.py
yellow_line_ws/src/state_machine/resource/: state_machine
yellow_line_ws/src/state_machine/state_machine/: __init__.py  green_arrow_detector.py  qr_detector_node.py  quick_test.py  red_barrier_detector.py  state_machine_node.py  test_yellow_line_detection.py  voice_node.py  yellow_line_detector.py  yellow_line_walker.py  yellow_marker_detector.py
